--- a/tensorsbeflowin.ipynb
+++ b/tensorsbeflowin.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -31,7 +23,8 @@
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
     "import errno\n",
-    "import shutil"
+    "import shutil\n",
+    "from scipy.misc import imsave \n"
    ]
   },
   {
@@ -61,25 +54,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_shoe(shoe_dict,view,s3,BUCKET_NAME='capstoneshoes'):\n",
+    "    KEY = '{}/{}'.format(shoe_dict,view)\n",
+    "    try:\n",
+    "        s3.Bucket(BUCKET_NAME).download_file(KEY, '{}/{}.jpeg'.format(view,shoe_dict))\n",
+    "    except botocore.exceptions.ClientError as e:\n",
+    "        if e.response['Error']['Code'] == \"404\":\n",
+    "            print(\"The object does not exist.\")\n",
+    "        else:\n",
+    "            raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_data(row,s3):\n",
+    "    views = ['lateralfrontleft']\n",
+    "    shoe_dict = row['shoe_hash']\n",
+    "    try:\n",
+    "        for view in views:\n",
+    "            path = os.makedirs('{}'.format(view))\n",
+    "            img_arr = np.load(get_shoe(shoe_dict,view,s3))\n",
+    "            img_arr = np.load('{}/{}.jpeg'.format(view,shoe_dict))\n",
+    "            imsave('{}/{}'.format(view,shoe_dict) + '.jpeg', img_arr)\n",
+    "    except OSError:\n",
+    "        for view in views:\n",
+    "            path = os.walk('{}'.format(view))\n",
+    "            get_shoe(shoe_dict,view,s3)\n",
+    "            img_arr = np.load('{}/{}.jpeg'.format(view,shoe_dict))\n",
+    "            imsave('{}/{}'.format(view,shoe_dict) + '.jpeg', img_arr)\n",
+    "    except:    \n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "brand_dict['under armour']"
+    "get_data(zap.loc[0],s3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "img_arr = np.load('./lateralfrontleft/0_0_684832.jpeg')\n",
+    "imsave('0_0_684832' + '.jpeg', img_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imsave('lateralfrontleft/0_0_684832' + '.jpeg', img_arr)"
    ]
   },
   {
@@ -90,163 +141,23 @@
    },
    "outputs": [],
    "source": [
-    "nike new balance adidas asics underarmour"
+    "def convert_arr_to_jpeg(brand, path='lateral_keras/train/'):\n",
+    "    abs_path = os.path.join(path, str(brand))\n",
+    "    fnames = os.listdir(abs_path)\n",
+    "    for fname in fnames: \n",
+    "        try:\n",
+    "            fpath = os.path.join(abs_path, fname)\n",
+    "            img_arr = np.load(fpath)\n",
+    "            imsave(fpath + '.jpeg', img_arr)\n",
+    "            print \"Successfully Converted: \", fpath\n",
+    "        except Exception as e:\n",
+    "            print e, fpath\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nike                     2514\n",
-       "new balance              1771\n",
-       "skechers                 1718\n",
-       "adidas                   1507\n",
-       "puma                     1474\n",
-       "vans                     1256\n",
-       "asics                    1228\n",
-       "under armour             1044\n",
-       "saucony                   790\n",
-       "converse                  751\n",
-       "lacoste                   631\n",
-       "dc                        605\n",
-       "merrell                   552\n",
-       "ecco                      523\n",
-       "polo ralph lauren         441\n",
-       "reebok                    382\n",
-       "sperry                    355\n",
-       "keds                      336\n",
-       "geox                      321\n",
-       "fila                      307\n",
-       "keen                      305\n",
-       "diadora                   294\n",
-       "brooks                    278\n",
-       "ryka                      273\n",
-       "etnies                    257\n",
-       "steve madden              249\n",
-       "supra                     240\n",
-       "globe                     233\n",
-       "frye                      229\n",
-       "native shoes              228\n",
-       "                         ... \n",
-       "inov-8                    192\n",
-       "clarks                    187\n",
-       "ecco sport                177\n",
-       "cole haan                 168\n",
-       "osiris                    167\n",
-       "aldo                      162\n",
-       "sanuk                     159\n",
-       "gola                      154\n",
-       "superga                   154\n",
-       "hoka one one              147\n",
-       "reef                      143\n",
-       "altra footwear            140\n",
-       "circa                     140\n",
-       "lakai                     137\n",
-       "propet                    137\n",
-       "the north face            131\n",
-       "k-swiss                   129\n",
-       "tretorn                   126\n",
-       "pearl izumi               125\n",
-       "naturino                  119\n",
-       "kenneth cole new york     117\n",
-       "calvin klein              115\n",
-       "emerica                   115\n",
-       "ugg                       113\n",
-       "five ten                  113\n",
-       "primigi                   111\n",
-       "bernie mev.               108\n",
-       "rockport                  105\n",
-       "tommy hilfiger            103\n",
-       "tsukihoshi                102\n",
-       "Name: brand_name, dtype: int64"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zap.brand_name.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(26422, 10)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zap.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_shoe(shoe_dict,view,s3,BUCKET_NAME='capstoneshoes'):\n",
-    "    KEY = '{}/{}'.format(shoe_dict,view)\n",
-    "    try:\n",
-    "        s3.Bucket(BUCKET_NAME).download_file(KEY, '{}/{}'.format(view,shoe_dict))\n",
-    "    except botocore.exceptions.ClientError as e:\n",
-    "        if e.response['Error']['Code'] == \"404\":\n",
-    "            print(\"The object does not exist.\")\n",
-    "        else:\n",
-    "            raise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_data(row,s3):\n",
-    "    views = ['lateralfrontleft']\n",
-    "    shoe_dict = row[1]['shoe_hash']\n",
-    "    print shoe_dict\n",
-    "    try:\n",
-    "        for view in views:\n",
-    "            path = os.makedirs('{}'.format(view))\n",
-    "            #row_imgs = map(lambda shoe_dict: get_shoe(shoe_dict), row[views].tolist())\n",
-    "            get_shoe(shoe_dict,view,s3)\n",
-    "    except OSError:\n",
-    "        for view in views:\n",
-    "            path = os.walk('{}'.format(view))\n",
-    "            #row_imgs = map(lambda shoe_dict: get_shoe(shoe_dict), row[views].tolist())\n",
-    "            get_shoe(shoe_dict,view,s3)\n",
-    "    except:    \n",
-    "        pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -1780,7 +1691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -1794,7 +1705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
