--- a/vgg-Copy1.ipynb
+++ b/vgg-Copy1.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "from keras.applications.resnet50 import ResNet50\n",
+    "from keras.applications.vgg19 import VGG19\n",
     "from keras.models import Model\n",
     "from keras.layers import Dense, Flatten, Dropout, Activation\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -22,24 +31,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "base_resnet = ResNet50(include_top=False, input_shape=(224, 224, 3), classes=2)"
+    "base_vgg = VGG19(include_top=False, weights='imagenet', input_shape=(224, 224, 3), classes=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "shoe_model = Flatten(input_shape=base_resnet.output.shape[1:])(base_resnet.output)\n",
+    "shoe_model = Flatten(input_shape=base_vgg.output.shape[1:])(base_vgg.output)\n",
     "shoe_model = Dense(1024, activation='relu')(shoe_model)\n",
     "shoe_model = Dense(512, activation='relu')(shoe_model)\n",
     "predictions = Dense(2, activation='softmax')(shoe_model)"
@@ -47,20 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "model = Model(inputs=base_resnet.input, outputs=predictions)\n",
-    "for layer in base_resnet.layers:\n",
+    "model = Model(inputs=base_vgg.input, outputs=predictions)\n",
+    "for layer in base_vgg.layers:\n",
     "    layer.trainable = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -135,19 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "X_valid, y_valid = test_generator.next()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -155,26 +152,26 @@
    "source": [
     "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping\n",
     "\n",
-    "nike_adidas_tboard = TensorBoard(log_dir='tensorboard_logs/nike_v_adidas')\n",
+    "vgg19_na_tboard = TensorBoard(log_dir='tensorboard_logs/vgg19_na')\n",
     "# causing the bug \n",
-    "nike_adidas_model = ModelCheckpoint(filepath='nike_adidas', verbose=1, monitor='loss', save_best_only=True, mode='max')\n",
+    "#nike_adidas_model = ModelCheckpoint(filepath='nike_adidas', verbose=1, monitor='loss', save_best_only=True, mode='max')\n",
     "early_stopping = EarlyStopping(monitor='val_acc', patience=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "callbacks_list = [early_stopping, nike_adidas_tboard]"
+    "callbacks_list = [early_stopping, vgg19_na_tboard]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -184,68 +181,8 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "63/63 [==============================] - 76s - loss: 0.5190 - acc: 0.7929 - val_loss: 1.0079 - val_acc: 0.3438\n",
-      "Epoch 2/50\n",
-      "63/63 [==============================] - 48s - loss: 0.2151 - acc: 0.9129 - val_loss: 1.2147 - val_acc: 0.3646\n",
-      "Epoch 3/50\n",
-      "63/63 [==============================] - 48s - loss: 0.1346 - acc: 0.9473 - val_loss: 2.0779 - val_acc: 0.3385\n",
-      "Epoch 4/50\n",
-      "63/63 [==============================] - 48s - loss: 0.1814 - acc: 0.9237 - val_loss: 1.7191 - val_acc: 0.3854\n",
-      "Epoch 5/50\n",
-      "63/63 [==============================] - 48s - loss: 0.1005 - acc: 0.9612 - val_loss: 1.2526 - val_acc: 0.3958\n",
-      "Epoch 6/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0924 - acc: 0.9582 - val_loss: 1.2220 - val_acc: 0.4531\n",
-      "Epoch 7/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0505 - acc: 0.9812 - val_loss: 0.6059 - val_acc: 0.6989\n",
-      "Epoch 8/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0754 - acc: 0.9741 - val_loss: 0.8322 - val_acc: 0.6250\n",
-      "Epoch 9/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0526 - acc: 0.9777 - val_loss: 0.7801 - val_acc: 0.7135\n",
-      "Epoch 10/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0681 - acc: 0.9752 - val_loss: 1.9494 - val_acc: 0.4792\n",
-      "Epoch 11/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0420 - acc: 0.9859 - val_loss: 1.6815 - val_acc: 0.6250\n",
-      "Epoch 12/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0603 - acc: 0.9780 - val_loss: 1.8481 - val_acc: 0.6042\n",
-      "Epoch 13/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0503 - acc: 0.9802 - val_loss: 0.6189 - val_acc: 0.8229\n",
-      "Epoch 14/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0192 - acc: 0.9931 - val_loss: 0.7749 - val_acc: 0.8281\n",
-      "Epoch 15/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0232 - acc: 0.9901 - val_loss: 0.9374 - val_acc: 0.7865\n",
-      "Epoch 16/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0555 - acc: 0.9791 - val_loss: 0.9596 - val_acc: 0.8177\n",
-      "Epoch 17/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0427 - acc: 0.9836 - val_loss: 0.9029 - val_acc: 0.7656\n",
-      "Epoch 18/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0277 - acc: 0.9906 - val_loss: 0.8885 - val_acc: 0.8021\n",
-      "Epoch 19/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0115 - acc: 0.9975 - val_loss: 0.9841 - val_acc: 0.8073\n",
-      "Epoch 20/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0167 - acc: 0.9945 - val_loss: 0.3380 - val_acc: 0.9247\n",
-      "Epoch 21/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0144 - acc: 0.9940 - val_loss: 1.1729 - val_acc: 0.7865\n",
-      "Epoch 22/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0154 - acc: 0.9935 - val_loss: 1.7252 - val_acc: 0.7031\n",
-      "Epoch 23/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0318 - acc: 0.9896 - val_loss: 0.5342 - val_acc: 0.8958\n",
-      "Epoch 24/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0156 - acc: 0.9940 - val_loss: 1.2903 - val_acc: 0.7917\n",
-      "Epoch 25/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0151 - acc: 0.9955 - val_loss: 0.6777 - val_acc: 0.8385\n",
-      "Epoch 26/50\n",
-      "63/63 [==============================] - 48s - loss: 0.0207 - acc: 0.9916 - val_loss: 0.7886 - val_acc: 0.8281\n"
+      "34/63 [===============>..............] - ETA: 47s - loss: 9.6637 - acc: 0.3787"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f6356eed150>"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -267,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "model.save_weights('best_model_weights')"
+    "model.save_weights('')"
    ]
   },
   {
